# tpt-keystone-db

./: .env.example  .gitignore  10harbourspec.txt  1keystonespec.txt  2meridianspec.txt  3prismspec.txt  4chronosspec.txt  5plexusspec.txt  6canopyspec.txt  7fluxspec.txt  8canvasspec.txt  9sdkspec.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  PHASE2_PLAN.md  README.md  TODO 1260701.md  TODO 1260710.md  TODO.md  docker-compose.yml  install.ps1  install.sh
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.mimocode/plans/: 1783564534234-playful-wizard.md
docs/: README.md  architecture.md  mvcc_snapshot_audit.md  sdks.md  security_audit_phase12.md  sql-reference.md
docs/formats/: README.md  btree.md  canopy_formats.md  chronos_ts_index.md  flux_grpc.proto  manifest_and_lease.md  meridian_geo_index.md  plexus_graph_index.md  primitives.md  prism_vector_index.md  sstable.md  wal.md
docs/tutorials/: cookbook.md  cookbook.sql  hybrid-search.md  quickstart.md
sdk-go/: conn.go  connstring.go  connstring_test.go  go.mod  pool.go  rows.go  smoke_test.go  value.go  wire.go  wire_test.go
sdk-python/: .gitignore  README.md  pyproject.toml
sdk-python/src/tpt_sdk/: __init__.py  blocking.py  client.py  pandas_ext.py  query_builder.py  typegen.py  wire.py
sdk-python/tests/: live_smoke.py  test_query_builder.py
tools/: flux_grpc_pb2.py  raw_grpc_client.py  verify_flux_grpc.py  verify_transactions.sh
tpt-canvas/: Cargo.toml  LICENSE  README.md
tpt-canvas/src/: client.rs  lib.rs  render.rs
tpt-cli/: Cargo.toml  README.md
tpt-cli/src/: data.rs  format.rs  main.rs  repl.rs
tpt-harbor/: Cargo.toml  README.md
tpt-harbor/examples/: smoke.rs
tpt-harbor/src/: connector.rs  dashboard.rs  http.rs  lib.rs  main.rs  pgwire.rs  schema.rs
tpt-harbor/src/engine/: checkpoint.rs  mod.rs
tpt-harbor/src/sources/: influxdb.rs  kafka.rs  mod.rs  mongodb.rs  mssql.rs  mysql.rs  neo4j.rs  oracle.rs  postgres.rs  vector.rs
tpt-keystone/: Cargo.toml  Dockerfile  PHASE2_PLAN.md  README.md
tpt-keystone-canvas/: Cargo.toml  LICENSE  README.md
tpt-keystone-canvas/examples/dashboard/: README.md  index.html  tsconfig.json  vite.config.ts
tpt-keystone-canvas/src/: client.rs  lib.rs  reactive.rs  theme.rs
tpt-keystone-canvas/src/components/: document.rs  vector_search.rs
tpt-keystone-cli/: Cargo.toml  README.md
tpt-keystone-cli/src/: data.rs  main.rs  migrate.rs  schema.rs  stream.rs
tpt-keystone-harbor/: Cargo.toml  README.md
tpt-keystone-harbor/examples/: smoke.rs
tpt-keystone-harbor/src/: connector.rs  dashboard.rs  http.rs  lib.rs  main.rs  pgwire.rs  verify.rs
tpt-keystone-harbor/src/engine/: checkpoint.rs  mod.rs
tpt-keystone-harbor/src/sources/: elasticsearch.rs  influxdb.rs  kafka.rs  mod.rs  mongodb.rs  mssql.rs  mysql.rs  neo4j.rs  odbc.rs  oracle.rs  postgis.rs  vector.rs
tpt-keystone-harbor/src/targets/: keystone.rs  mod.rs
tpt-keystone-operator/: Cargo.toml  Dockerfile  README.md
tpt-keystone-operator/deploy/: namespace.yaml  operator.yaml  rbac.yaml
tpt-keystone-operator/src/: autoscale.rs  main.rs  reconcile.rs  resources.rs
tpt-keystone-sdk/: Cargo.toml  README.md
tpt-keystone-sdk/src/: canvas.rs  ffi.rs  lib.rs  query_builder.rs
tpt-keystone-sdk/src/keystone/: blocking.rs
tpt-keystone/benches/: keystone_bench.rs
tpt-keystone/examples/: gpu_smoke_test.rs
tpt-keystone/src/: lib.rs  main.rs  metrics.rs  telemetry.rs
tpt-keystone/src/executor/: canopy_aggregate.rs  canopy_tests.rs  catalog.rs  chronos_tests.rs  copy.rs  ddl.rs  ddl_tests.rs  dml.rs  eval.rs  flux_tests.rs  geo_tests.rs  gpu_join_tests.rs  gql.rs  graph_fn.rs  join.rs  mirror_tests.rs  mod.rs  ogc_conformance_tests.rs  pg_dump_tests.rs  phase4_tests.rs  planner.rs  plexus_tests.rs  prism_gpu_tests.rs  prism_tests.rs  rbac.rs  rbac_tests.rs  regex_op_tests.rs  select.rs  stats.rs  synapse_tests.rs  transaction_tests.rs  udf.rs
tpt-keystone/src/geo/: geometry.rs  gpu.rs  h3.rs  mod.rs  raster.rs  s2.rs
tpt-keystone/src/geo/shaders/: spatial_join.wgsl
tpt-keystone/src/graph/: algorithms.rs  mod.rs
tpt-keystone/src/mcp/: http.rs  mod.rs  protocol.rs  protocol_tests.rs  server.rs  tests.rs  tools.rs  tools_tests.rs
tpt-keystone/src/mirror/: audit.rs  metrics.rs  mod.rs  provenance.rs  replay.rs  trace.rs
tpt-keystone/src/sql/: ast.rs  cache.rs  cache_tests.rs  lexer.rs  mod.rs  parser.rs  parser_tests.rs
tpt-keystone/src/storage/: btree.rs  cache.rs  canopy_index.rs  chaos_tests.rs  compress.rs  config.rs  database.rs  diskann_index.rs  flux.rs  geo_index.rs  graph_index.rs  guard.rs  io_backend.rs  ivf_pq_index.rs  json_schema.rs  jsonb.rs  lease.rs  lsm.rs  manifest.rs  mod.rs  mvcc.rs  mvcc_tests.rs  objectstore.rs  phase3_tests.rs  sharded_vector_index.rs  sstable.rs  test_support.rs  ts_index.rs  tx.rs  vector_index.rs  wal.rs
tpt-keystone/src/storage/database/: catalog.rs  flux.rs  graph.rs  json.rs  mod.rs  spatial.rs  storage_engine.rs  time.rs  txn.rs  vector.rs
tpt-keystone/src/synapse/: actor.rs  coordination.rs  memory.rs  mod.rs  tools.rs
tpt-keystone/src/vector/: gpu.rs  hnsw.rs  ivf_pq.rs  kmeans.rs  mod.rs  pq.rs  shard.rs  vamana.rs  vector.rs
tpt-keystone/src/vector/shaders/: similarity.wgsl
tpt-keystone/src/wire/: bridge_auth.rs  bridge_auth_tests.rs  codec.rs  codec_tests.rs  http_query.rs  http_query_tests.rs  messages.rs  messages_tests.rs  mod.rs  privileges.rs  privileges_tests.rs  role_members.rs  role_members_tests.rs  roles.rs  roles_tests.rs  scram.rs  session.rs  tls.rs  websocket.rs  websocket_tests.rs
tpt-keystone/src/wire/grpc/: hpack.rs  http2.rs  mod.rs  proto.rs
tpt-operator/: Cargo.toml  Dockerfile  README.md
tpt-operator/deploy/: operator.yaml  rbac.yaml  (+1 more)
tpt-sdk/: Cargo.toml  README.md
tpt-sdk-android/: build.gradle.kts  consumer-rules.pro  settings.gradle.kts
tpt-sdk/src/: canvas.rs  ffi.rs  lib.rs  zerocopy.rs
tpt-sdk/src/keystone/: blocking.rs  mod.rs  wire.rs
tpt_sdk/: pubspec.yaml
(+27 files in other folders)
