[package]
name = "tpt-keystone-operator"
version = "0.1.0"
edition = "2021"
description = "Kubernetes operator for TPT Keystone clusters (CRD-based lifecycle management)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tpt-solutions/tpt-keystone-db"
documentation = "https://github.com/tpt-solutions/tpt-keystone-db#readme"
readme = "../README.md"
keywords = ["kubernetes", "operator", "database", "crd", "cloud-native"]
categories = ["database", "command-line-utilities"]
rust-version = "1.85"

[[bin]]
name = "tpt-keystone-operator"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4.45", features = ["serde"] }
futures = "0.3.32"
k8s-openapi = { version = "0.28.0", features = ["latest", "schemars"] }
kube = { version = "4.0.0", features = ["runtime", "derive", "client"] }
reqwest = { version = "0.13.4", default-features = false }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
