[package]
name = "tpt-keystone"
version = "0.1.0"
edition = "2021"
description = "TPT Keystone — cloud-native relational database engine"
license = "Apache-2.0"

[[bin]]
name = "tpt-keystone"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
