[package]
name = "tpt-keystone"
version = "0.1.0"
edition = "2021"
description = "TPT Keystone — cloud-native relational database engine"
license = "Apache-2.0"

[[bin]]
name = "tpt-keystone"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
bloomfilter = "1"
sha2 = "0.10"
hex = "0.4"
aws-sdk-s3 = "1"
aws-config = "1"
rand = "0.8"
wasmtime = "26"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
wat = "1"