[package]
name = "tpt-keystone"
version = "0.1.0"
edition = "2021"
description = "TPT Keystone — cloud-native relational database engine"
license = "Apache-2.0"

[lib]
name = "tpt_keystone"
path = "src/lib.rs"

[[bin]]
name = "tpt-keystone"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
bloomfilter = "1"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
aws-sdk-s3 = "1"
aws-config = "1"
rand = "0.8"
wasmtime = "26"
base64 = "0.22"
hmac = "0.12"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
opentelemetry = { version = "0.32.0", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.32.1", default-features = false, features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["trace", "grpc-tonic"] }
tracing-opentelemetry = "0.33.0"
wgpu = { version = "22", default-features = false, features = ["wgsl"] }
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
wat = "1"
criterion = "0.5"
proptest = "1"

[[bench]]
name = "keystone_bench"
harness = false

[profile.dev]
debug = "line-tables-only"
